--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,16 +3,12 @@
 }
 
 body {
-  color: #444;
-  font-family: HelveticaNeue, Helvetica, Arial, Sas-serif;
-  font-size: 14px;
-  margin: 50px auto;
-  width: 940px;
-  -webkit-font-smoothing: antialiased;
+  color: #333;
+  font-size: 16px;
+  margin: 0;
 }
 
 table {
   border-collapse: collapse;
   width: 100%;
 }
-
