--- a/views/index.erb
+++ b/views/index.erb
@@ -1,23 +1,18 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="robots" content="noindex, nofollow">
-  <meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8">
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="viewport" content="width=device-width">
 
-  <title><%= params['controller'].gsub("-", " ").capitalize %> <%= params['action'] %></title>
+    <title></title>
 
-  <link rel="stylesheet" href="css/styles.css">
-  <%# Get Stylesheet file from /my-controller/action.css %>
-  <link rel="stylesheet" href="/css/<%= params['controller'] %>/<%= params['action'] %>.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/stylesheets/styles.css">
 
-  <!-- PROTOTYPE DAWG! -->
+  </head>
+  <body>
 
-  <script src="js/jquery-2.1.0.min.js"></script>
-  <%# Get JavaScript file from /my-controller/action.js %>
-  <script src="/js/<%= params['controller'] %>/<%= params['action'] %>.js"></script>
 
-</body>
+    <script src="/javascripts/jquery-2.1.0.min.js"></script>
+  </body>
 </html>
